frontend/app/drawings/drawings.module.scss
.drawing-card {
  --border-color: var(--border);
  border: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  height: min-content;
  width: 100%;
  text-decoration: none;

  &:hover {
    --border-color: var(--black);
    text-decoration: none;
  }

  p {
    max-width: 100%;
    margin: 0;
    width: 100%;
    border-bottom: 1px solid var(--border-color);
    font-size: 0.75rem;
    padding: 0.5rem;
    line-height: 1.2em;
  }

  p,
  h6 {
    margin: 0;
  }

  h6 {
    width: 100%;
    border-bottom: 1px solid var(--border-color);
    display: flex;
    flex-direction: row;
    span {
      padding: 0.5rem;
      &:not(:last-child) {
        border-right: 1px solid var(--border-color);
      }
    }

    @media screen and (max-width: 800px) {
      span:last-child {
        display: none;
      }

      span:nth-child(2) {
        border-right: none;
      }
    }
  }
}

.drawing-page {
  @media screen and (max-width: 800px) {
    flex-direction: column-reverse;
  }

  > div {
    &:first-child {
      border-right: 1px solid var(--black);
      @media screen and (max-width: 800px) {
        border-top: 1px solid var(--black);
        border-right: none;
      }
    }
    &:nth-child(2) {
      margin-right: 1.875rem;
      @media screen and (max-width: 800px) {
        margin-right: 0;
      }
    }
  }
  h3 {
    margin: 0;
  }

  &__title-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  &__image-container {
    position: relative;

    img {
      max-width: 100%;
      height: auto;
    }
  }

  &__uuid-label {
    position: absolute;
    bottom: 0;
    left: 0.5rem;
  }
}

